  lines would push the "filename:linenumber", "Parallel" and "Add
  Comment" links way off to the far right of the page, requiring
  horizontal scrolling to see them.  Rework the display so that they
  are always pushed to the left, regardless of the length of the topic
  lines.

* Added "Check All"/"Clear All" links in the view comments page for
  convenience.

Version 1.7.7

* The table of contents links on the view topic page didn't include
  the brmode parameter, so clicking on a filename link reloaded the
  whole topic page, which is inconvenient.  This reloading behaviour
  has also been fixed when coming from the topic list or create topic
  page.

Version 1.7.6

* Fixed bug where created topics for deployments which had projects
  disabled were not handled correctly.

* Fixed bug found by Jason Remillard <jremillardshop@yahoo.com> where
  emails were being sent for those lines which already had a comment,
  but $allow_comment_email was false.

Version 1.7.5

* Added in support for parsing VSS diffs, and retrieving file data
  from a VSS repository.  VSS support is not complete yet, as the
  script for generated the diff text has not been submitted yet.

The following changes below were from Aaron Kardell
<akardell@altonaed.com>:

* Modified unidiff parser so that diffs created with
  --show-function-line and --show-c-function can be parsed and
  displayed in the view topic screen.

* Incorporated SubmitCodeReview.pl script, which can be used for
  automating the submission of a code review topic from the command
  line.  It also has support for incremental code reviews.  See the
  script and its help text for more details.

* Added an option to the view topic screen which controls how text is
  wrapped.  This can be useful for reviews with long source code lines.

The following changes below were from Jason Remillard
<jremillardshop@yahoo.com>:

* The topic view page has been modified so that a non-diff topic makes
  better use of screen real-estate.
